<resources>
    <string name="app_version">v0.1.0 beta</string>
    <string name="app_last_updated">Utolsó frissítés: 2021.09.14</string>
    <string name="app_name">Hun-DE</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">Névjegy</string>
    <string name="to_be_nominative_fragment_label">Én vagyok</string>
    <string name="pronoun_fragment_label">Én, te, ő, mi, ti, ők</string>
    <string name="definite_determiner_fragment_label">A, az</string>
    <string name="indefinite_determiner_fragment_label">Egy …</string>
    <string name="to_be_accusative_label">Engem, téged, őt</string>
    <string name="to_be_dative_label">Velem, nekem, tőlem</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hunde_logo_content_description">Hun-DE app logó</string>

    <string name="singular">egyes szám</string>
    <string name="singular_short">egyes</string>
    <string name="plural">többes szám</string>
    <string name="plural_short">többes</string>
    <string name="masculine">hímnem</string>
    <string name="masculine_short">hím</string>
    <string name="feminine">nőnem</string>
    <string name="feminine_short">nő</string>
    <string name="neuter">semleges nem</string>
    <string name="neuter_short">seml.</string>
    <string name="to_be_fragment_title">Én-te-ők, mi-ti-ők</string>
    <string name="i_am_hun">én vagyok</string>
    <string name="i_am_de">ich bin</string>
    <string name="you_are_singular_hun">te vagy</string>
    <string name="you_are_singular_de">du bist</string>
    <string name="he_is_hun">ő van</string>
    <string name="he_is_de">er ist</string>
    <string name="she_is_hun">ő van</string>
    <string name="she_is_de">sie ist</string>
    <string name="it_is_hun">az van</string>
    <string name="it_is_de">es ist</string>

    <string name="we_are_hun">mi vagyunk</string>
    <string name="we_are_de">wir sind</string>
    <string name="you_are_plural_hun">ti vagytok</string>
    <string name="you_are_plural_de">ihr seid</string>
    <string name="they_are_hun">ők vannak</string>
    <string name="they_are_de">sie sind</string>

    <string name="mode">eset</string>
    <string name="nominative_mode">alanyeset</string>
    <string name="nominative_mode_short">alany</string>
    <string name="nominative_mode_de">Nominativ</string>
    <string name="accusative_mode">tárgyeset</string>
    <string name="accusative_mode_short">tárgy</string>
    <string name="accusative_mode_de">Akkusativ</string>
    <string name="dative_mode">részeseset</string>
    <string name="dative_mode_short">részes</string>
    <string name="dative_mode_de">Dativ</string>

    <string name="definite_determiner_nominative_masculine_de">der</string>
    <string name="definite_determiner_nominative_feminine_de">die</string>
    <string name="definite_determiner_nominative_neuter_de">das</string>
    <string name="definite_determiner_nominative_plural_de">die</string>

    <string name="definite_determiner_accusative_masculine_de">den</string>
    <string name="definite_determiner_accusative_feminine_de">die</string>
    <string name="definite_determiner_accusative_neuter_de">das</string>
    <string name="definite_determiner_accusative_plural_de">die</string>

    <string name="definite_determiner_dative_masculine_de">dem</string>
    <string name="definite_determiner_dative_feminine_de">der</string>
    <string name="definite_determiner_dative_neuter_de">dem</string>
    <string name="definite_determiner_dative_plural_de">den</string>


    <string name="pronoun_nominative_i">én</string>
    <string name="pronoun_nominative_i_de">ich</string>
    <string name="pronoun_nominative_you_singular">te</string>
    <string name="pronoun_nominative_you_singular_de">du</string>
    <string name="pronoun_nominative_he">ő</string>
    <string name="pronoun_nominative_he_de">er</string>
    <string name="pronoun_nominative_she">ő</string>
    <string name="pronoun_nominative_she_de">sie</string>
    <string name="pronoun_nominative_it">az</string>
    <string name="pronoun_nominative_it_de">es</string>

    <string name="pronoun_nominative_we">mi</string>
    <string name="pronoun_nominative_we_de">wir</string>
    <string name="pronoun_nominative_you_plural">ti</string>
    <string name="pronoun_nominative_you_plural_de">ihr</string>
    <string name="pronoun_nominative_they">ők</string>
    <string name="pronoun_nominative_they_de">sie</string>
    <string name="about_text">A Hun-DE egy egyszerű applikáció, ami a német nyelv tanulását segíti
    összefoglaló táblázatokkal.</string>
</resources>