<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="org.kign.hunde.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_toBeFragment"
            app:destination="@+id/toBeFragment" />
        <action
            android:id="@+id/action_mainFragment_to_definiteDeterminerFragment"
            app:destination="@id/definiteDeterminerFragment" />
        <action
            android:id="@+id/action_mainFragment_to_pronounFragment"
            app:destination="@id/pronounFragment" />
    </fragment>

    <fragment
        android:id="@+id/toBeFragment"
        android:name="org.kign.hunde.ToBeFragment"
        android:label="@string/to_be_nominative_fragment_label"
        tools:layout="@layout/fragment_to_be" />

    <fragment
        android:id="@+id/definiteDeterminerFragment"
        android:name="org.kign.hunde.DefiniteDeterminerFragment"
        android:label="@string/definite_determiner_fragment_label"
        tools:layout="@layout/fragment_definite_determiner">

    </fragment>

    <fragment
        android:id="@+id/pronounFragment"
        android:name="org.kign.hunde.PronounFragment"
        android:label="@string/pronoun_fragment_label"
        tools:layout="@layout/fragment_pronoun" />

</navigation>